# openGL

./: CMakeLists.txt  README.md
src/: glad.c  glad.h  main.cpp
